--- a/SitecoreBundler/SitecoreBundler/SitecoreBundler.csproj
+++ b/SitecoreBundler/SitecoreBundler/SitecoreBundler.csproj
@@ -122,7 +122,7 @@
     <Compile Include="Models\Templates\Bundler.cs" />
     <Compile Include="Models\Templates\__BaseBundleGroup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repository\BundleRepository.cs" />
+    <Compile Include="Bundling\BundleRepository.cs" />
     <Compile Include="SitecoreBundler.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -132,7 +132,9 @@
     </Content>
     <Content Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Repository\" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="Models\Templates.scx">
       <Generator>SitecoreCodeGenerator</Generator>
