Refactors + Logging on Debug Mode

--- a/SitecoreBundler/SitecoreBundler/App_Config/Include/Sitecore.Bundler.config
+++ b/SitecoreBundler/SitecoreBundler/App_Config/Include/Sitecore.Bundler.config
@@ -1,12 +1,17 @@
 ﻿<configuration xmlns:patch="http://www.sitecore.net/xmlconfig/">
   <sitecore>
 
-    <!--  
-    The ID of the Global Bundler Item
-    If you want to have separated Bundlers to each of your websites leave this empty
-    -->
     <settings>
+      <!--  
+      The ID of the Global Bundler Item
+      If you want to have separated Bundlers to each of your websites leave this empty
+      -->
       <setting name="Bundler.GlobalBundlerItem" value="" />
+      
+      <!--  
+      Debug mode will log more information
+      -->
+      <setting name="Bundler.DebugMode" value="true" />      
     </settings>
 
   </sitecore>
