--- a/SitecoreBundler/SitecoreBundler/SitecoreBundler.csproj
+++ b/SitecoreBundler/SitecoreBundler/SitecoreBundler.csproj
@@ -109,10 +109,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BundlerExtensions.cs" />
+    <Compile Include="Bundling\Repository\IBundleRepository.cs" />
     <Compile Include="Cache\BundlerCache.cs" />
     <Compile Include="Cache\BundlerSettingsCache.cs" />
     <Compile Include="Cache\CacheExtensions.cs" />
     <Compile Include="Constants.cs" />
+    <Compile Include="Log\Logger.cs" />
+    <Compile Include="Log\LogTimerType.cs" />
+    <Compile Include="Log\LogType.cs" />
     <Compile Include="Models\Templates.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -122,8 +127,9 @@
     <Compile Include="Models\Templates\Bundler.cs" />
     <Compile Include="Models\Templates\__BaseBundleGroup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Bundling\BundleRepository.cs" />
-    <Compile Include="SitecoreBundler.cs" />
+    <Compile Include="Bundling\Repository\BundleRepository.cs" />
+    <Compile Include="Bundling\SitecoreBundler.cs" />
+    <Compile Include="Settings\BundleSettings.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Config\Include\Sitecore.Bundler.config" />
