BungleGroups now can have their individual settings for Bundle, Minify and Agressive Cache

--- a/SitecoreBundler/SitecoreBundler/SitecoreBundler.csproj
+++ b/SitecoreBundler/SitecoreBundler/SitecoreBundler.csproj
@@ -111,8 +111,8 @@
   <ItemGroup>
     <Compile Include="BundlerExtensions.cs" />
     <Compile Include="Bundling\Repository\IBundleRepository.cs" />
+    <Compile Include="Cache\BundleGroupCache.cs" />
     <Compile Include="Cache\BundlerCache.cs" />
-    <Compile Include="Cache\BundlerSettingsCache.cs" />
     <Compile Include="Cache\CacheExtensions.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="Log\Logger.cs" />
