Added support for external Site Resolver

--- a/SitecoreBundler/SitecoreBundler/App_Config/Include/Sitecore.Bundler.config
+++ b/SitecoreBundler/SitecoreBundler/App_Config/Include/Sitecore.Bundler.config
@@ -1,18 +1,24 @@
 ﻿<configuration xmlns:patch="http://www.sitecore.net/xmlconfig/">
-  <sitecore>
+    <sitecore>
+        <settings>
+            <!--  
+            The ID of the Global Bundler Item
+            If you want to have separated Bundlers to each of your websites leave this empty
+            -->
+            <setting name="Bundler.GlobalBundlerItem" value="" />
 
-    <settings>
-      <!--  
-      The ID of the Global Bundler Item
-      If you want to have separated Bundlers to each of your websites leave this empty
-      -->
-      <setting name="Bundler.GlobalBundlerItem" value="" />
-      
-      <!--  
-      Debug mode will log more information
-      -->
-      <setting name="Bundler.DebugMode" value="true" />      
-    </settings>
+            <!--  
+            Debug mode will log more information
+            -->
+            <setting name="Bundler.DebugMode" value="true" />
 
-  </sitecore>
+            <!--
+            Points to an assembly for resolving current website context
+            By default it will return Sitecore.Context.Site
+            If you want to implement your own resolver change this to your class assembly
+            It should implement the interface SitecoreBundler.SiteResolver.ISiteResolver and return the SiteContext at the Run method
+            -->
+            <setting name="Bundler.SiteResolverAssembly" value="SitecoreBundler.SiteResolver.ContextSiteResolver, SitecoreBundler" />
+        </settings>
+    </sitecore>
 </configuration>
