--- a/SitecoreBundler/SitecoreBundler/SitecoreBundler.csproj
+++ b/SitecoreBundler/SitecoreBundler/SitecoreBundler.csproj
@@ -111,6 +111,10 @@
   <ItemGroup>
     <Compile Include="BundlerExtensions.cs" />
     <Compile Include="Bundling\Repository\IBundleRepository.cs" />
+    <Compile Include="Bundling\Repository\ISiteResolverRepository.cs" />
+    <Compile Include="SiteResolver\ISiteResolver.cs" />
+    <Compile Include="SiteResolver\ContextSiteResolver.cs" />
+    <Compile Include="Bundling\Repository\SiteResolverRepository.cs" />
     <Compile Include="Cache\BundleGroupCache.cs" />
     <Compile Include="Cache\BundlerCache.cs" />
     <Compile Include="Cache\CacheExtensions.cs" />
@@ -138,9 +142,7 @@
     </Content>
     <Content Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Repository\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="Models\Templates.scx">
       <Generator>SitecoreCodeGenerator</Generator>
